fix: z-index tabs component

--- a/packages/ui/src/styles/layout.css
+++ b/packages/ui/src/styles/layout.css
@@ -60,10 +60,10 @@
   --z-index-page-nav: 1187;
   --z-index-main-content-scrolled: 1186;
   --z-index-page-nav-scrolled: 1185;
-  --z-index-page-mobile-nav: 1101;
-  --z-index-stepper: 1101;
-  --z-index-tab: 1101;
-  --z-index-tooltip: 1101;
+  --z-index-page-mobile-nav: 1;
+  --z-index-stepper: 1;
+  --z-index-tab: 1;
+  --z-index-tooltip: 1;
 }
 
 body {
